--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -5,4 +5,6 @@
 /* components */
 @import "../components/logo.css";
 @import "../components/button.css";
+@import "../components/header.css";
+
 /* Custom css */
