add hero pic and text

--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -139,7 +139,7 @@
   margin-left: var(--ml11);
 }
 
-@media (min-width: 576px) {
+/* @media (min-width: 576px) {
   :root {
     --width: 540px;
     --half-gap: 15px;
@@ -606,4 +606,4 @@
   .row > .ml-xxl-11 {
     margin-left: var(--ml11);
   }
-}
+} */
