--- a/css/base/base.css
+++ b/css/base/base.css
@@ -14,19 +14,26 @@ body {
   font-family: "Sen", sans-serif;
 }
 
-main {
-  display: inline-block;
-  width: 100%;
+main .no-padding {
+  padding: 0;
 }
 
-.hero-img img {
-  width: 100%;
-}
-
-main .bg-main > .row {
+main .container .no-margin {
   margin: 0;
 }
 
-main .bg-main > .row .col-12 {
-  margin: 0;
+.hero {
+  background-image: linear-gradient(360deg, #222, rgba(34, 34, 34, 0)), url(../../img/hero\ section\ img.jpg);
+  background-size: cover;
+  height: 550px;
+  background-position: 0px 0px, 50% 50%;
+}
+
+.hero-tittle-btn {
+  display: flex;
+  align-items: center;
+  text-wrap: wrap;
+  row-gap: 15px;
+
+  justify-items: center;
 }
