--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,13 +1,15 @@
 .main-header {
   margin-top: 0;
   padding: 0;
-  position: fixed;
+  /* position: fixed; */
+  /* position: relative; */
   top: 0;
   z-index: 1;
 }
 
 .main-header .row {
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 .main-header .row .col-12 {
