--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -139,7 +139,7 @@
   margin-left: var(--ml11);
 }
 
-/* @media (min-width: 576px) {
+@media (min-width: 576px) {
   :root {
     --width: 540px;
     --half-gap: 15px;
@@ -235,7 +235,7 @@
 
 @media (min-width: 768px) {
   :root {
-    --width: 720px;
+    --width: 100%;
     --half-gap: 20px;
   }
 
@@ -329,7 +329,7 @@
 
 @media (min-width: 992px) {
   :root {
-    --width: 960px;
+    --width: 100%;
     --half-gap: 25px;
   }
 
@@ -423,7 +423,7 @@
 
 @media (min-width: 1200px) {
   :root {
-    --width: 1140px;
+    --width: 100%;
     --half-gap: 30px;
   }
 
@@ -517,7 +517,11 @@
 
 @media (min-width: 1400px) {
   :root {
-    --width: 1320px;
+    --width: 100%;
+  }
+
+  .row .hero-tittle-btn .text-bigger {
+    width: 45%;
   }
 
   .hidden-xxl {
@@ -606,4 +610,4 @@
   .row > .ml-xxl-11 {
     margin-left: var(--ml11);
   }
-} */
+}
