--- a/css/base/base.css
+++ b/css/base/base.css
@@ -119,3 +119,37 @@ main .container .no-margin {
   margin-top: 60px;
   width: 100%;
 }
+
+/* safe section */
+
+.safe {
+  height: 550px;
+  background-image: linear-gradient(360deg, #222, rgba(34, 34, 34, 0)), url(../../img/safe\ section\ pic.jpg);
+  background-size: cover;
+  background-position: 0px 0px, 50% 50%;
+  justify-content: center;
+  display: flex;
+  text-align: center;
+  align-items: flex-end;
+  width: 100%;
+}
+
+.safe-tittle-btn {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: right;
+  align-items: flex-end;
+  text-align: right;
+  text-wrap: wrap;
+  color: white;
+}
+
+.safe-tittle-btn .text-bigger {
+  font-size: 45px;
+  width: 55%;
+}
+
+.safe-tittle-btn .p-text {
+  width: 45%;
+}
