--- a/css/components/button.css
+++ b/css/components/button.css
@@ -21,3 +21,19 @@
   color: var(--color-black);
   cursor: pointer;
 }
+/* save button */
+.btn-safe {
+  padding: 10px 25px;
+  font-size: 15px;
+  font-weight: 700;
+  border: none;
+  border-radius: 5px;
+  background-color: #fff;
+  color: var(--color-black);
+}
+
+.btn-safe:hover {
+  background-color: var(--color-red);
+  color: #fff;
+  cursor: pointer;
+}
